[package]
name = "client"
version = "0.1.0"
authors = ["Ludvig Lamm <ludviglamm@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
server = {path = "../server/"}
tokio = { version = "1.4.0", features = ["full"] }
engine = {path = "../engine/"}
bincode = "1.3.2"
bigdecimal = { version = "0.2.0", features = ["serde"] }
num-bigint = {version = "0.4", features = ["serde"]}

tui = "0.14"
termion = "1.5"
rand = "0.8.3"
unicode-width = "0.1.8"
termion-input-tokio = "0.3.0"
futures-util = "0.3.13"
futures = "0.3.13"
clap = "3.0.0-beta.2"
serde = "1.0.125"
features = "0.10.0"
derive = "1.0.0"
