[package]
name = "engine"
version = "0.1.0"
authors = ["Ludvig Lamm <ludviglamm@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bigdecimal = "0.2.0"
serde = { version = "1.0.125", features = ["derive"] }
