[package]
name = "server"
version = "0.1.0"
authors = ["Ludvig Lamm <ludviglamm@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bigdecimal = {version = "0.2.0",features=["serde"]}
num-bigint = {version = "0.3", features = ["serde"]}
bincode = "1.3.2"
engine = { path = "../engine/"}
serde = { version = "1.0.125", features = ["derive"] }
serde_bytes = "0.11.5"
tokio = { version = "1.4.0", features = ["full"] }
